--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,9 +40,9 @@
 }
 
 .title {
-  margin: 0;
+  margin: 2rem;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
@@ -51,9 +51,9 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 0.3rem 0;
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .code {
@@ -74,9 +74,11 @@
 }
 
 .card {
+  display: grid;
+  grid-gap: 20px; 
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -108,10 +110,82 @@
   margin-left: 0.5rem;
 }
 
+/* Estilo para botones */
+.button {
+  background-color: #0070f3; /* Color de fondo azul */
+  color: white; /* Texto blanco */
+  border: none; /* Sin borde */
+  padding: 10px 20px; /* Espaciado interno */
+  border-radius: 5px; /* Bordes redondeados */
+  cursor: pointer; /* Cursor en forma de mano */
+  font-size: 1rem; /* Tamaño de texto */
+  transition: background-color 0.3s ease; /* Transición suave al cambiar de color */
+}
+
+.button:hover,
+.button:focus {
+  background-color: #0056b3; /* Color más oscuro al pasar el mouse o enfocar */
+}
+
+/* Estilo para formularios centrados */
+.formContainer {
+  display: flex; /* Habilita Flexbox */
+  flex-direction: column; /* Alinea los hijos verticalmente */
+  justify-content: center; /* Centrado vertical */
+  align-items: center; /* Centrado horizontal */
+  height: 100vh; /* Altura total de la ventana del navegador */
+  width: 100%; /* Ocupa el ancho completo en dispositivos móviles */
+  max-width: 800px; /* Máximo ancho del formulario */
+  margin: auto; /* Centrado horizontal y ayuda al centrado vertical */
+  padding: 20px; /* Espaciado interno */
+  box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1); /* Sombra suave invertida */
+  border-radius: 8px; /* Bordes redondeados */
+  background-color: #333; /* Fondo oscuro */
+  color: #fff; /* Texto blanco */
+}
+
+.formField {
+  margin-bottom: 20px; /* Espaciado entre campos */
+  text-align: center;
+}
+
+.formField input,
+.formField textarea {
+  min-width: 400px; /* Ajusta esto según el placeholder más largo que tengas */
+  padding: 12px 20px;
+  margin-top: 5px; /* Espaciado superior */
+  border: 1px solid #555; /* Borde más claro que el fondo pero aún oscuro */
+  border-radius: 5px; /* Bordes redondeados */
+  box-sizing: border-box; /* El padding y border no incrementan el ancho total */
+  background-color: #222; /* Fondo ligeramente más oscuro para los campos */
+  color: #fff; /* Texto en blanco */
+  text-align: center;
+}
+
+/* Ajustes para mejorar la visibilidad del texto dentro de los inputs y textareas */
+.formField input::placeholder,
+.formField textarea::placeholder {
+  color: #bbb; /* Color más claro para los placeholders */
+}
+
+/* Estilo para etiquetas de los campos de formulario */
+.formField label {
+  display: block; /* Ocupa el ancho completo */
+  margin-bottom: 5px; /* Espaciado inferior */
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .formContainer {
+    padding: 10px; /* Menos espaciado interno */
+    margin: 20px; /* Mayor margen para evitar que toque los bordes de la pantalla */
+  }
+  .formField input,
+  .formField textarea {
+  min-width: 100%; 
   }
 }
 
